# ion

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
clipboard/: Cargo.toml
clipboard/src/: arboard_provider.rs  error.rs  lib.rs  loop_guard.rs  provider.rs  watcher.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs  settings.rs  watcher.rs
core/: Cargo.toml
core/src/: client.rs  display.rs  error.rs  handoff.rs  identity.rs  input_session.rs  main.rs  peer_id.rs  routing.rs  server.rs  trust_store.rs  udp_peers.rs
crypto/: Cargo.toml
crypto/src/: config.rs  error.rs  fingerprint.rs  identity.rs  lib.rs  policy.rs  trust_store.rs  verifier.rs
crypto/tests/: loopback.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  identity.rs  main.rs  state.rs
input/: Cargo.toml
input/src/: capture.rs  error.rs  event.rs  inject.rs  lib.rs
input/src/wayland/: capture.rs  inject.rs  mod.rs
input/src/win32/: capture.rs  inject.rs  keymap.rs  mod.rs
input/src/x11/: capture.rs  control.rs  inject.rs  mod.rs  util.rs
input/tests/: x11_smoke.rs
installer/: README.md
installer/linux/: ionconnect-core.service
ipc/: Cargo.toml
ipc/src/: client.rs  error.rs  lib.rs  server.rs  token.rs
network/: Cargo.toml
network/src/: backoff.rs  codec.rs  connection.rs  discovery.rs  error.rs  heartbeat.rs  lib.rs  tls.rs  udp_codec.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  error.rs  lib.rs  message.rs
protocol/tests/: round_trip.rs
screen/: Cargo.toml
screen/src/: edge.rs  geometry.rs  layout.rs  lib.rs
shared/: Cargo.toml
shared/src/: device_id.rs  lib.rs  modifiers.rs
