[workspace]
resolver = "2"
members = [
    "shared",
    "protocol",
    "crypto",
    "network",
    "input",
    "screen",
    "clipboard",
    "config",
    "ipc",
    "gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["IonConnect contributors"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
