[package]
name = "ionconnect-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ionconnect-core"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
ionconnect-clipboard = { version = "0.1.0", path = "../clipboard" }
ionconnect-config = { version = "0.1.0", path = "../config" }
ionconnect-crypto = { version = "0.1.0", path = "../crypto" }
ionconnect-input = { version = "0.1.0", path = "../input" }
ionconnect-ipc = { version = "0.1.0", path = "../ipc" }
ionconnect-network = { version = "0.1.0", path = "../network" }
ionconnect-protocol = { version = "0.1.0", path = "../protocol" }
ionconnect-screen = { version = "0.1.0", path = "../screen" }
ionconnect-shared = { version = "0.1.0", path = "../shared" }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
rustls-pki-types = "1.15.0"
