[package]
name = "ionconnect-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rcgen = { version = "0.14.8", default-features = false, features = ["ring", "pem"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "logging"] }
rustls-pki-types = { version = "1.15.0", features = ["std"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
